# circom-witness-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: semaphore.cc  semaphore.rs
include/: blobstore.h
script/: blobstore.cc  mimc.cpp  mimc.cpp.new  mult.cpp  replace.sh
src/: arith.rs  blobstore.cc  blobstore2.cc  blobstore3.cc  blobstore5.cc  field.rs  generate.rs  graph.rs  lib.rs  main.rs
