[package]
name = "circom-witness-rs"
description = "Fast witness generator for Circom circuits"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["cryptography", "ZK", "circom"]
categories = ["cryptography"]
repository = "https://github.com/philsippl/circom-witness-rs"
authors = [
  "Philipp Sippl <philipp@worldcoin.org>",
]

[dependencies]
ark-bn254 = { version = "0.5", features = ["std"] }
ark-ff = { version = "0.5", features = ["std"] }
ark-serialize = { version = "0.5", features = ["derive"] }
byteorder = "1"
cxx = "1"
eyre = "0.6"
hex = "0.4"
postcard = { version = "1", features = ["use-std"], default-features = false }
rand = "0.8"
ruint = { version = "1.17", features = ["rand", "serde", "ark-ff-05", "num-bigint"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
num-traits = "0.2"

[build-dependencies]
cxx-build = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

[features]
build-witness = []
